@@ -9,6 +9,7 @@ New features, changes and fixes since gnuplot version 4.4
 * NEW plot style "with boxplot"
 * NEW plot style "with circles" allows start/end angles for each arc
 * NEW plot style "with ellipses"
+* NEW plot style "with fillsteps"
 * NEW qt terminal driver 
 * NEW variable (per-data point) color for additional plot styles
 * NEW "set key opaque" produces a key with an opaque background
